Refactoring: implemented a parent pom.xml